src/test/deca/context/invalid/provided/11_invalid_cast_string_to_boolean.deca
{
    string s;
    boolean b;

    s = "Hello world";
    // Interdit : cast string -> boolean
    b = (boolean)(s);

    println("Ne devrait jamais s'afficher");
}
